fixed header, vertically aligned

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2603,18 +2603,16 @@ body.two-sidebars .region-below-content {
 .top {
   height: 8px;
   background: #d83c3c;
-  margin-bottom: 20px;
 }
 .header {
-  padding: 8px 0 8px 0;
-  margin-bottom: 20px;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 .logo {
   box-sizing: border-box;
   display: block;
   float: left;
   font-size: 20px;
-  line-height: 20px;
   text-transform: uppercase;
   font-family: "roboto slab", "helvetica", "arial";
   color: #333;
@@ -2655,85 +2653,15 @@ body.two-sidebars .region-below-content {
     position: relative;
   }
 }
-@media only screen and (min-width : 1380px) {
-  .session-dropdown {
-    float: right !important;
-  }
-}
-@media only screen and (min-width : 1024px) and (max-width : 1380px) {
-  .session-dropdown {
-    float: right !important;
-  }
-}
-@media only screen and (min-width : 768px) and (max-width : 1024px) {
-  .session-dropdown {
-    float: right !important;
-  }
-}
-@media only screen and (max-width : 768px) {
-  .session-dropdown {
-    float: right;
-  }
+.session-dropdown {
+  float: left;
+  height: 30px;
 }
 .user-profile {
-  box-sizing: border-box;
-  line-height: 15px;
-  font-size: 12px;
-}
-@media only screen and (min-width : 1380px) {
-  .user-profile {
-    width: 402px;
-    display: inline-block;
-    float: left;
-    margin-left: 14px;
-    position: relative;
-  }
-}
-@media only screen and (min-width : 1024px) and (max-width : 1380px) {
-  .user-profile {
-    width: 346px;
-    display: inline-block;
-    float: left;
-    margin-left: 14px;
-    position: relative;
-  }
-}
-@media only screen and (min-width : 768px) and (max-width : 1024px) {
-  .user-profile {
-    width: 236px;
-    display: inline-block;
-    float: left;
-    margin-left: 12px;
-    position: relative;
-  }
-}
-@media only screen and (max-width : 768px) {
-  .user-profile {
-    width: auto;
-    display: block;
-    float: none;
-    position: relative;
-  }
-}
-@media only screen and (min-width : 1380px) {
-  .user-profile {
-    float: right !important;
-  }
-}
-@media only screen and (min-width : 1024px) and (max-width : 1380px) {
-  .user-profile {
-    float: right !important;
-  }
-}
-@media only screen and (min-width : 768px) and (max-width : 1024px) {
-  .user-profile {
-    float: right !important;
-  }
-}
-@media only screen and (max-width : 768px) {
-  .user-profile {
-    float: right;
-  }
+  float: right;
+  height: 30px;
+  line-height: 2.2em;
+  font-size: 14px;
 }
 .user-profile form {
   display: inline-block;
@@ -3226,14 +3154,10 @@ body.two-sidebars .region-below-content {
   width: 120px;
   height: 120px;
 }
-.header {
-  margin-bottom: 0px;
-}
 .hero {
   margin-bottom: 15em;
 }
 .banner {
-  /*background-image: asset-url("wood.jpg", image);*/
   background-size: cover;
   vertical-align: middle;
   position: absolute;
@@ -5823,7 +5747,8 @@ select:focus {
   float: left;
   display: block;
   text-transform: uppercase;
-  line-height: 1.3;
+  height: 30px;
+  line-height: 2.2;
 }
 .region.top ul.menu li:first-child a,
 .region.header ul.menu li:first-child a,
